# CineHDR

./: .gitignore  GEMINI.md  README.md  benchmark_report.json  benchmark_report.md  io.github.diegopvlk.Cine.json  meson.build  run_benchmark.py  run_dev.py  update_translations.sh
.github/: FUNDING.yml
.github/workflows/: build-flatpak.yml  release.yml
build-aux/flatpak/: io.github.diegopvlk.Cine.json  io.github.rusmikev.CineHDR.json
data/: io.github.diegopvlk.Cine.gschema.xml  io.github.diegopvlk.Cine.metainfo.xml.in  io.github.rusmikev.CineHDR.desktop.in  io.github.rusmikev.CineHDR.gschema.xml  io.github.rusmikev.CineHDR.metainfo.xml.in  io.github.rusmikev.CineHDR.service.in  meson.build
data/icons/: meson.build
docs/: HDR.md  ROADMAP.md
po/: LINGUAS  POTFILES.in  ar.po  cs.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  io.github.diegopvlk.Cine.pot  io.github.rusmikev.CineHDR.pot  it.po  ko.po  nl.po  oc.po  pt.po  pt_BR.po  ru.po  si.po  ta.po  tr.po  uk.po  ur.po  zh_CN.po
src/: cine.gresource.xml  cine.in  cinehdr.gresource.xml  cinehdr.in  gl_bindings.py  gl_renderer.py  hdr_controller.py  hdr_detection.py  hdr_diagnostics.blp  hdr_diagnostics.py  hdr_menu.blp  hdr_menu.py  history.blp  history.py  main.py  meson.build  mpris.py  options.blp  options.py  playlist.blp  playlist.py  preferences.blp  preferences.py  save_session.py  shortcuts-dialog.blp  shortcuts.py  style.css  utils.py  video_widget.py  wayland_cm_probe.py  wayland_output_hdr.py  window.blp  window.py
tests/: meson.build  test_hdr.py
